Update xor batch example

--- a/examples/XOR.ipynb
+++ b/examples/XOR.ipynb
@@ -18,7 +18,7 @@
     "            self.w = torch.nn.Parameter(torch.rand(6, 1))\n",
     "\n",
     "    def forward(self, x):\n",
-    "        return torch.matmul(self.w, x).view(,3, 2)\n"
+    "        return torch.matmul(self.w, x).view(3, 2)\n"
    ]
   },
   {
@@ -83,9 +83,10 @@
     "\n",
     "# xor_cons = constraint(xor)\n",
     "num_samples = 100\n",
+    "xor_cons = constraint(xor, ViolationBruteForceSolver())\n",
     "# xor_cons = constraint(xor, SamplingSolver(num_samples))\n",
     "# xor_cons = constraint(xor, WeightedSamplingSolver(num_samples))\n",
-    "xor_cons = constraint(xor, ProductTNormLogicSolver())\n",
+    "#xor_cons = constraint(xor, ProductTNormLogicSolver())\n",
     "# x: 1 -> Bx1\n",
     "for _ in range(500):\n",
     "    opt.zero_grad()\n",
@@ -96,56 +97,6 @@
     "    loss.backward()\n",
     "    y_prob = torch.softmax(y_logit, dim=-1)\n",
     "    plot.add(y0=y_prob[0,1].data, y1=y_prob[1,1].data, y2=y_prob[2,1].data)\n",
-    "    plot_loss.add(oloss=oloss.data, closs=closs.data, loss=loss.data)\n",
-    "    opt.step()\n",
-    "\n",
-    "plot.show()\n",
-    "plot_loss.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from itertools import chain\n",
-    "\n",
-    "neta = Net()\n",
-    "netb = Net()\n",
-    "\n",
-    "opt = torch.optim.SGD(chain(neta.parameters(), netb.parameters()), lr=0.1)\n",
-    "plot = PlotHelper()\n",
-    "plot_loss = PlotHelper()\n",
-    "\n",
-    "\n",
-    "# y: 3, Bx3\n",
-    "def xor(a, b):\n",
-    "    # return (y[0] and not y[2]) or (not y[0] and y[2])\n",
-    "    return a[2]!=b[1] and b[1]!=b[2] and b[2]!=a[1]\n",
-    "    # return any([y[i]==y[i-1] for i in range(10)])\n",
-    "\n",
-    "# xor_cons = constraint(xor)\n",
-    "num_samples = 100\n",
-    "# xor_cons = constraint(xor, SamplingSolver(num_samples))\n",
-    "# xor_cons = constraint(xor, WeightedSamplingSolver(num_samples))\n",
-    "xor_cons = constraint(xor, ProductTNormLogicSolver())\n",
-    "# x: 1 -> Bx1\n",
-    "for _ in range(500):\n",
-    "    opt.zero_grad()\n",
-    "    ya_logit = neta(x)\n",
-    "    yb_logit = netb(x)\n",
-    "    oloss = F.cross_entropy(ya_logit[2:], y[2:])\n",
-    "    closs = xor_cons(ya_logit, yb_logit)\n",
-    "    loss = oloss + closs\n",
-    "    loss.backward()\n",
-    "    ya_prob = torch.softmax(ya_logit, dim=-1)\n",
-    "    yb_prob = torch.softmax(yb_logit, dim=-1)\n",
-    "    plot.add(\n",
-    "        ya1=ya_prob[1,1].data, ya2=ya_prob[2,1].data, \n",
-    "        yb1=yb_prob[1,1].data, yb2=yb_prob[2,1].data)\n",
     "    plot_loss.add(oloss=oloss.data, closs=closs.data, loss=loss.data)\n",
     "    opt.step()\n",
     "\n",
@@ -210,9 +161,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "\n",
     "from plothelper import PlotHelper\n",
     "\n",
     "from pytorch_constraints.constraint import constraint\n",
@@ -228,14 +184,14 @@
     "y = torch.tensor([[0, 0, 1],[0, 0, 1]])\n",
     "\n",
     "def xor(y):\n",
-    "    return (y[0] and not y[2]) or (not y[0] and y[2])\n",
+    "    return (y[:,0] and not y[:,2]) or (not y[:,0] and y[:,2])\n",
     "xor_cons = constraint(xor, ViolationBruteForceSolver())\n",
     "\n",
     "for _ in range(100):\n",
     "    opt.zero_grad()\n",
     "    y_logit = net(x)\n",
     "    oloss = F.cross_entropy(y_logit[:, 2:, :].view(-1, 2), y[:, 2:].view(-1,))\n",
-    "    closs = xor_cons(ya_logit, yb_logit)\n",
+    "    closs = xor_cons(y_logit, y_logit)\n",
     "    loss = oloss + closs\n",
     "    loss.backward()\n",
     "    y_prob = torch.softmax(y_logit, dim=-1)\n",
@@ -257,9 +213,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.3 64-bit ('tocon': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python38364bittoconconda8fa913e178e84db79ffcc5a5318afad7"
   },
   "language_info": {
    "codemirror_mode": {
