--- a/examples/XOR.ipynb
+++ b/examples/XOR.ipynb
@@ -213,9 +213,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.3 64-bit ('tocon': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python38364bittoconconda8fa913e178e84db79ffcc5a5318afad7"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -227,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
