--- a/examples/mnist-addition.ipynb
+++ b/examples/mnist-addition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,9 +60,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0.1%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ./MNIST/MNIST/raw/train-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100.1%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./MNIST/MNIST/raw/train-images-idx3-ubyte.gz to ./MNIST/MNIST/raw\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "113.5%"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ./MNIST/MNIST/raw/train-labels-idx1-ubyte.gz\n",
+      "Extracting ./MNIST/MNIST/raw/train-labels-idx1-ubyte.gz to ./MNIST/MNIST/raw\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ./MNIST/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "180.4%../torch/csrc/utils/tensor_numpy.cpp:141: UserWarning: The given NumPy array is not writeable, and PyTorch does not support non-writeable tensors. This means you can write to the underlying (supposedly non-writeable) NumPy array using the tensor. You may want to copy the array to protect its data or make it writeable before converting it to a tensor. This type of warning will be suppressed for the rest of this program.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./MNIST/MNIST/raw/t10k-images-idx3-ubyte.gz to ./MNIST/MNIST/raw\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ./MNIST/MNIST/raw/t10k-labels-idx1-ubyte.gz\n",
+      "Extracting ./MNIST/MNIST/raw/t10k-labels-idx1-ubyte.gz to ./MNIST/MNIST/raw\n",
+      "Processing...\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.5,), (0.5,))])\n",
     "mnist_train_data = torchvision.datasets.MNIST(root='./MNIST', train=True, download=True,transform=transform)\n",
@@ -73,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -177,14 +240,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 1009/29999 [00:47<6:14:02,  1.29it/s]"
+      "  3%|▎         | 1018/29999 [00:17<1:08:58,  7.00it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 2000/4999 (40%)\n",
+      "Test Accuracy: 3474/4999 (69%)\n",
       "\n"
      ]
     },
@@ -192,14 +255,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  7%|▋         | 2007/29999 [01:33<4:24:14,  1.77it/s]"
+      "  7%|▋         | 2017/29999 [00:34<1:06:54,  6.97it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4446/4999 (89%)\n",
+      "Test Accuracy: 4388/4999 (88%)\n",
       "\n"
      ]
     },
@@ -207,14 +270,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 3005/29999 [02:21<8:21:51,  1.12s/it] "
+      " 10%|█         | 3014/29999 [00:51<1:04:40,  6.95it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4538/4999 (91%)\n",
+      "Test Accuracy: 4516/4999 (90%)\n",
       "\n"
      ]
     },
@@ -222,14 +285,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 13%|█▎        | 4003/29999 [03:06<5:06:43,  1.41it/s]"
+      " 13%|█▎        | 4013/29999 [01:09<1:02:17,  6.95it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4624/4999 (92%)\n",
+      "Test Accuracy: 4609/4999 (92%)\n",
       "\n"
      ]
     },
@@ -237,14 +300,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 17%|█▋        | 5005/29999 [03:53<21:07:07,  3.04s/it]"
+      " 17%|█▋        | 5013/29999 [01:26<59:54,  6.95it/s]  "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4587/4999 (92%)\n",
+      "Test Accuracy: 4644/4999 (93%)\n",
       "\n"
      ]
     },
@@ -252,14 +315,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 6006/29999 [04:38<5:07:32,  1.30it/s] "
+      " 20%|██        | 6012/29999 [01:44<58:44,  6.81it/s]  "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4633/4999 (93%)\n",
+      "Test Accuracy: 4699/4999 (94%)\n",
       "\n"
      ]
     },
@@ -267,14 +330,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 23%|██▎       | 7002/29999 [05:22<5:53:05,  1.09it/s]"
+      " 23%|██▎       | 7012/29999 [02:02<1:05:10,  5.88it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4653/4999 (93%)\n",
+      "Test Accuracy: 4675/4999 (94%)\n",
       "\n"
      ]
     },
@@ -282,14 +345,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 27%|██▋       | 8004/29999 [06:07<4:28:37,  1.36it/s]"
+      " 27%|██▋       | 8009/29999 [02:21<1:13:30,  4.99it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4722/4999 (94%)\n",
+      "Test Accuracy: 4607/4999 (92%)\n",
       "\n"
      ]
     },
@@ -297,14 +360,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 9005/29999 [06:52<16:16:50,  2.79s/it]"
+      " 30%|███       | 9016/29999 [02:40<59:58,  5.83it/s]  "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4489/4999 (90%)\n",
+      "Test Accuracy: 4749/4999 (95%)\n",
       "\n"
      ]
     },
@@ -312,14 +375,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 33%|███▎      | 10003/29999 [07:40<4:32:06,  1.22it/s]"
+      " 33%|███▎      | 10012/29999 [02:57<47:55,  6.95it/s]  "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4659/4999 (93%)\n",
+      "Test Accuracy: 4732/4999 (95%)\n",
       "\n"
      ]
     },
@@ -327,14 +390,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 37%|███▋      | 11009/29999 [08:24<3:46:53,  1.39it/s]"
+      " 37%|███▋      | 11015/29999 [03:15<47:13,  6.70it/s]  "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4731/4999 (95%)\n",
+      "Test Accuracy: 4589/4999 (92%)\n",
       "\n"
      ]
     },
@@ -342,14 +405,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████      | 12004/29999 [09:11<15:38:18,  3.13s/it]"
+      " 40%|████      | 12015/29999 [03:34<47:06,  6.36it/s]  "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4781/4999 (96%)\n",
+      "Test Accuracy: 4768/4999 (95%)\n",
       "\n"
      ]
     },
@@ -357,14 +420,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 43%|████▎     | 13009/29999 [09:56<2:53:25,  1.63it/s] "
+      " 43%|████▎     | 13011/29999 [03:53<41:58,  6.75it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4697/4999 (94%)\n",
+      "Test Accuracy: 4638/4999 (93%)\n",
       "\n"
      ]
     },
@@ -372,14 +435,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 47%|████▋     | 14006/29999 [10:40<6:35:24,  1.48s/it]"
+      " 47%|████▋     | 14010/29999 [04:12<43:38,  6.11it/s]  "
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4654/4999 (93%)\n",
+      "Test Accuracy: 4747/4999 (95%)\n",
       "\n"
      ]
     },
@@ -387,14 +450,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 50%|█████     | 15005/29999 [11:24<2:48:29,  1.48it/s]"
+      " 50%|█████     | 15013/29999 [04:30<38:24,  6.50it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4721/4999 (94%)\n",
+      "Test Accuracy: 4707/4999 (94%)\n",
       "\n"
      ]
     },
@@ -402,14 +465,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 53%|█████▎    | 16006/29999 [12:09<2:10:21,  1.79it/s]"
+      " 53%|█████▎    | 16010/29999 [04:49<36:12,  6.44it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4743/4999 (95%)\n",
+      "Test Accuracy: 4768/4999 (95%)\n",
       "\n"
      ]
     },
@@ -417,14 +480,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 57%|█████▋    | 17006/29999 [12:54<3:35:15,  1.01it/s]"
+      " 57%|█████▋    | 17013/29999 [05:07<36:22,  5.95it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4774/4999 (95%)\n",
+      "Test Accuracy: 4814/4999 (96%)\n",
       "\n"
      ]
     },
@@ -432,14 +495,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|██████    | 18002/29999 [13:40<3:37:06,  1.09s/it]"
+      " 60%|██████    | 18012/29999 [05:25<31:27,  6.35it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4800/4999 (96%)\n",
+      "Test Accuracy: 4780/4999 (96%)\n",
       "\n"
      ]
     },
@@ -447,14 +510,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 63%|██████▎   | 19009/29999 [14:25<1:55:43,  1.58it/s]"
+      " 63%|██████▎   | 19012/29999 [05:44<31:02,  5.90it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4739/4999 (95%)\n",
+      "Test Accuracy: 4765/4999 (95%)\n",
       "\n"
      ]
     },
@@ -462,14 +525,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 67%|██████▋   | 20004/29999 [15:10<8:01:05,  2.89s/it] "
+      " 67%|██████▋   | 20012/29999 [06:03<27:51,  5.97it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4824/4999 (96%)\n",
+      "Test Accuracy: 4798/4999 (96%)\n",
       "\n"
      ]
     },
@@ -477,7 +540,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 70%|███████   | 21002/29999 [15:55<1:58:37,  1.26it/s]"
+      " 70%|███████   | 21016/29999 [06:22<23:15,  6.44it/s]"
      ]
     },
     {
@@ -492,14 +555,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 73%|███████▎  | 22007/29999 [16:43<3:05:25,  1.39s/it]"
+      " 73%|███████▎  | 22015/29999 [06:41<21:19,  6.24it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4759/4999 (95%)\n",
+      "Test Accuracy: 4739/4999 (95%)\n",
       "\n"
      ]
     },
@@ -507,14 +570,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 77%|███████▋  | 23008/29999 [17:29<1:25:32,  1.36it/s]"
+      " 77%|███████▋  | 23016/29999 [07:00<17:53,  6.51it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4799/4999 (96%)\n",
+      "Test Accuracy: 4517/4999 (90%)\n",
       "\n"
      ]
     },
@@ -522,14 +585,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|████████  | 24007/29999 [18:17<1:12:53,  1.37it/s]"
+      " 80%|████████  | 24016/29999 [07:18<15:45,  6.33it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4759/4999 (95%)\n",
+      "Test Accuracy: 4779/4999 (96%)\n",
       "\n"
      ]
     },
@@ -537,14 +600,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 83%|████████▎ | 25005/29999 [19:03<1:22:01,  1.01it/s]"
+      " 83%|████████▎ | 25012/29999 [07:37<12:59,  6.40it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4781/4999 (96%)\n",
+      "Test Accuracy: 4808/4999 (96%)\n",
       "\n"
      ]
     },
@@ -552,14 +615,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 87%|████████▋ | 26004/29999 [19:48<51:21,  1.30it/s]  "
+      " 87%|████████▋ | 26013/29999 [07:55<10:36,  6.27it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4726/4999 (95%)\n",
+      "Test Accuracy: 4747/4999 (95%)\n",
       "\n"
      ]
     },
@@ -567,14 +630,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 90%|█████████ | 27005/29999 [20:32<2:23:53,  2.88s/it]"
+      " 90%|█████████ | 27009/29999 [08:14<07:51,  6.34it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4797/4999 (96%)\n",
+      "Test Accuracy: 4824/4999 (96%)\n",
       "\n"
      ]
     },
@@ -582,14 +645,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 93%|█████████▎| 28007/29999 [21:17<25:02,  1.33it/s]  "
+      " 93%|█████████▎| 28011/29999 [08:33<05:12,  6.37it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4778/4999 (96%)\n",
+      "Test Accuracy: 4802/4999 (96%)\n",
       "\n"
      ]
     },
@@ -597,14 +660,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 97%|█████████▋| 29003/29999 [22:03<16:42,  1.01s/it]"
+      " 97%|█████████▋| 29014/29999 [08:51<02:36,  6.28it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 4804/4999 (96%)\n",
+      "Test Accuracy: 4815/4999 (96%)\n",
       "\n"
      ]
     },
@@ -612,7 +675,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 29999/29999 [22:33<00:00, 22.17it/s]\n"
+      "100%|██████████| 29999/29999 [09:04<00:00, 55.07it/s]\n"
      ]
     }
    ],
@@ -671,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
