--- a/examples/Learning to sort.ipynb
+++ b/examples/Learning to sort.ipynb
@@ -167,7 +167,7 @@
    "id": "42a94a8d",
    "metadata": {},
    "source": [
-    "The `argsort` represents a permutation of the indices of the array. We see that the first index of the `argsort` represents which element of the original array should show up in the first position of  \"sorted\" array below it. Similarly, every element of the \"sorted\" array is defined by the index in the `argsort`. Of course, the random network does not sort the array unless we are *extremely* lucky. So what we see here is just a re-ordered array, perhaps with duplicates, rather than a sorted one."
+    "The `argsort` aspires to produce a permutation of the indices of the array. We see that the first index of the `argsort` represents which element of the original array should show up in the first position of  \"sorted\" array below it. Similarly, every element of the \"sorted\" array is defined by the index in the `argsort`. Of course, the random network does not sort the array unless we are *extremely* lucky. So what we see here is just a re-ordered array, perhaps with duplicates, rather than a sorted one."
    ]
   },
   {
@@ -561,10 +561,7 @@
      "end_time": "2021-08-14T23:09:26.203792Z",
      "start_time": "2021-08-14T23:09:26.179494Z"
     },
-    "code_folding": [
-     21,
-     84
-    ]
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -696,7 +693,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "def experiment(array_size=None, \n",
     "               array=None,\n",
     "               num_epochs=50, \n",
@@ -718,8 +714,7 @@
     "              local_sort_loss_windows=sort_window_sizes,\n",
     "              local_unique_index_loss_windows=unique_index_window_sizes)\n",
     "    \n",
-    "    result.display()\n",
-    "\n"
+    "    result.display()"
    ]
   },
   {
