--- a/examples/NLI_Transitivity.ipynb
+++ b/examples/NLI_Transitivity.ipynb
@@ -301,7 +301,7 @@
    "source": [
     "from pytorch_constraints.constraint import constraint\n",
     "\n",
-    "# the actual constraint function used for t-norm solvers\n",
+    "# the actual constraint function for, e.g., t-norm solvers\n",
     "# inputs are logits predictions\n",
     "def transitivity(ph_batch, hz_batch, pz_batch):\n",
     "    ee_e = (ph_batch[:, ENT]).logical_and(hz_batch[:, ENT]) <= (pz_batch[:, ENT])\n",
