Change module name

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -174,10 +174,10 @@
     "import torch\n",
     "import itertools\n",
     "\n",
-    "from pytorch_constraints.constraint import constraint\n",
-    "from pytorch_constraints.brute_force_solver import *\n",
-    "from pytorch_constraints.sampling_solver import *\n",
-    "from pytorch_constraints.tnorm_solver import ProductTNormLogicSolver\n",
+    "from pylon.constraint import constraint\n",
+    "from pylon.brute_force_solver import *\n",
+    "from pylon.sampling_solver import *\n",
+    "from pylon.tnorm_solver import ProductTNormLogicSolver\n",
     "\n",
     "net = Net()\n",
     "opt = torch.optim.SGD(net.parameters(), lr=0.1)\n",
