--- a/examples/Entity-Relation Extraction.ipynb
+++ b/examples/Entity-Relation Extraction.ipynb
@@ -269,9 +269,9 @@
     "import sys\n",
     "sys.path.append(\"..\")\n",
     "\n",
-    "from pytorch_constraints.constraint import constraint\n",
-    "from pytorch_constraints.brute_force_solver import *\n",
-    "from pytorch_constraints.sampling_solver import *\n",
+    "from pylon.constraint import constraint\n",
+    "from pylon.brute_force_solver import *\n",
+    "from pylon.sampling_solver import *\n",
     "\n",
     "ENTITY_TO_ID = {\"O\":0,\"Loc\":1, \"Org\":2, \"Peop\":3, \"Other\":4}\n",
     "REL_TO_ID = {\"*\":0, \"Work_For_arg1\":1, \"Kill_arg1\":2, \"OrgBased_In_arg1\":3, \"Live_In_arg1\":4,\n",
