--- a/examples/Learning to sort.ipynb
+++ b/examples/Learning to sort.ipynb
@@ -49,8 +49,8 @@
     "import sys\n",
     "sys.path.append(\"..\")\n",
     "\n",
-    "from pytorch_constraints.constraint import constraint\n",
-    "from pytorch_constraints.sampling_solver import WeightedSamplingSolver"
+    "from pylon.constraint import constraint\n",
+    "from pylon.sampling_solver import WeightedSamplingSolver"
    ]
   },
   {
