--- a/examples/MNIST - only_one.ipynb
+++ b/examples/MNIST - only_one.ipynb
@@ -168,9 +168,9 @@
     "import sys\n",
     "sys.path.append(\"..\")\n",
     "\n",
-    "from pytorch_constraints.constraint import constraint\n",
-    "from pytorch_constraints.brute_force_solver import SatisfactionBruteForceSolver\n",
-    "from pytorch_constraints.sampling_solver import SamplingSolver, WeightedSamplingSolver\n",
+    "from pylon.constraint import constraint\n",
+    "from pylon.brute_force_solver import SatisfactionBruteForceSolver\n",
+    "from pylon.sampling_solver import SamplingSolver, WeightedSamplingSolver\n",
     "\n",
     "def only_one(x):\n",
     "    return sum(x) == 1\n",
