--- a/examples/MNIST Addition - Video.ipynb
+++ b/examples/MNIST Addition - Video.ipynb
@@ -197,7 +197,7 @@
     "import sys\n",
     "sys.path.append(\"../\")\n",
     "\n",
-    "from pytorch_constraints.constraint import constraint\n",
+    "from pylon.constraint import constraint\n",
     "\n",
     "def enforce_sum(img1, img2, kwargs):\n",
     "    return img1 + img2 == kwargs['summation']\n",
