--- a/examples/NLI_Transitivity.ipynb
+++ b/examples/NLI_Transitivity.ipynb
@@ -299,7 +299,7 @@
     }
    ],
    "source": [
-    "from pytorch_constraints.constraint import constraint\n",
+    "from pylon.constraint import constraint\n",
     "\n",
     "# the actual constraint function for, e.g., t-norm solvers\n",
     "# inputs are logits predictions\n",
