--- a/examples/SRL_Unique_Role.ipynb
+++ b/examples/SRL_Unique_Role.ipynb
@@ -20,12 +20,12 @@
     "from transformers import *\n",
     "from torch.utils.data import (DataLoader, RandomSampler, SequentialSampler, TensorDataset)\n",
     "from torch import nn\n",
-    "from pytorch_constraints.constraint import constraint\n",
-    "from pytorch_constraints.sampling_solver import WeightedSamplingSolver\n",
-    "#from pytorch_constraints.circuit_solver import SemanticLossCircuitSolver\n",
-    "from pytorch_constraints.shaped_lazy_solver import ProductTNormSolver\n",
-    "from pytorch_constraints.shaped_lazy_solver import GodelTNormSolver\n",
-    "from pytorch_constraints.shaped_lazy_solver import LukasiewiczTNormSolver\n",
+    "from pylon.constraint import constraint\n",
+    "from pylon.sampling_solver import WeightedSamplingSolver\n",
+    "#from pylon.circuit_solver import SemanticLossCircuitSolver\n",
+    "from pylon.shaped_lazy_solver import ProductTNormSolver\n",
+    "from pylon.shaped_lazy_solver import GodelTNormSolver\n",
+    "from pylon.shaped_lazy_solver import LukasiewiczTNormSolver\n",
     "\n",
     "#B_A0, B_A1, B_A2, B_A3, B_A4 = None, None, None, None, None"
    ]
@@ -281,7 +281,7 @@
    "outputs": [],
    "source": [
     "def unique_role(y):\n",
-    "    from pytorch_constraints import lazy_torch as torch\n",
+    "    from pylon import lazy_torch as torch\n",
     "    shape = y.size()\n",
     "    y_ext = y + 1e-6\n",
     "    y_ext = y_ext.unsqueeze(1).tile(1, shape[1], 1, 1).log()\n",
