--- a/examples/Sudoku - 9x9 - ADMM.ipynb
+++ b/examples/Sudoku - 9x9 - ADMM.ipynb
@@ -313,8 +313,8 @@
     "multipliers = torch.tensor([0]*27)\n",
     "\n",
     "import torch.optim as optim\n",
-    "from pytorch_constraints.constraint import constraint\n",
-    "from pytorch_constraints.sampling_solver import WeightedSamplingSolver\n",
+    "from pylon.constraint import constraint\n",
+    "from pylon.sampling_solver import WeightedSamplingSolver\n",
     "\n",
     "model = SudokuSolver(9)#.cuda()\n",
     "# model.convolutions[-1].register_backward_hook(backward_hook)\n",
