--- a/examples/Sudoku - 9x9.ipynb
+++ b/examples/Sudoku - 9x9.ipynb
@@ -322,8 +322,8 @@
     "\n",
     "\n",
     "import torch.optim as optim\n",
-    "from pytorch_constraints.constraint import constraint\n",
-    "from pytorch_constraints.sampling_solver import WeightedSamplingSolver\n",
+    "from pylon.constraint import constraint\n",
+    "from pylon.sampling_solver import WeightedSamplingSolver\n",
     "\n",
     "model = SudokuSolver(9)\n",
     "# model.convolutions[-1].register_backward_hook(backward_hook)\n",
