--- a/examples/Sudoku 6x6 - Video.ipynb
+++ b/examples/Sudoku 6x6 - Video.ipynb
@@ -234,7 +234,7 @@
     "sys.path.append(\"..\")\n",
     "\n",
     "import torch.optim as optim\n",
-    "from pytorch_constraints.constraint import constraint\n",
+    "from pylon.constraint import constraint\n",
     "\n",
     "isunique_constraint = constraint(isunique)"
    ]
