--- a/examples/XOR.ipynb
+++ b/examples/XOR.ipynb
@@ -64,10 +64,10 @@
     "sys.path.append(\"..\")\n",
     "\n",
     "from plothelper import PlotHelper\n",
-    "from pytorch_constraints.constraint import constraint\n",
-    "from pytorch_constraints.brute_force_solver import *\n",
-    "from pytorch_constraints.sampling_solver import *\n",
-    "from pytorch_constraints.tnorm_solver import ProductTNormLogicSolver\n",
+    "from pylon.constraint import constraint\n",
+    "from pylon.brute_force_solver import *\n",
+    "from pylon.sampling_solver import *\n",
+    "from pylon.tnorm_solver import ProductTNormLogicSolver\n",
     "\n",
     "net = Net()\n",
     "opt = torch.optim.SGD(net.parameters(), lr=0.1)\n",
@@ -171,8 +171,8 @@
     "\n",
     "from plothelper import PlotHelper\n",
     "\n",
-    "from pytorch_constraints.constraint import constraint\n",
-    "from pytorch_constraints.brute_force_solver import ViolationBruteForceSolver\n",
+    "from pylon.constraint import constraint\n",
+    "from pylon.brute_force_solver import ViolationBruteForceSolver\n",
     "\n",
     "\n",
     "net = BatchNet()\n",
