--- a/examples/lazy_tensor.ipynb
+++ b/examples/lazy_tensor.ipynb
@@ -9,7 +9,7 @@
     "import torch\n",
     "import sys\n",
     "\n",
-    "sys.path.append(\"../pytorch_constraints/\")\n",
+    "sys.path.append(\"../pylon/\")\n",
     "from lazy_tensor import ConstLazyTensor, ConstShapedLazyTensor, LazyTensor "
    ]
   },
