--- a/examples/Sudoku - 6x6.ipynb
+++ b/examples/Sudoku - 6x6.ipynb
@@ -236,8 +236,8 @@
     "\n",
     "\n",
     "import torch.optim as optim\n",
-    "from pytorch_constraints.constraint import constraint\n",
-    "from pytorch_constraints.sampling_solver import WeightedSamplingSolver\n",
+    "from pylon.constraint import constraint\n",
+    "from pylon.sampling_solver import WeightedSamplingSolver\n",
     "\n",
     "model = SudokuSolver(6)\n",
     "optimizer = optim.SGD(model.parameters(), lr=1.0)\n",
